--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,29 @@
 aiohttp==3.7.3
+alabaster==0.7.12
 apps==0.0.0.0.dev20200918
 asgiref==3.3.4
 async-timeout==3.0.1
 attrs==20.3.0
+Babel==2.9.1
+boto3==1.23.9
+botocore==1.26.10
 certifi==2020.12.5
 chardet==3.0.4
-discord==1.0.1
-discord.py==1.6.0
+colorama==0.4.4
+distlib==0.3.4
 dj-database-url==0.5.0
 Django==3.2.2
 django-bootstrap3==7.0.1
 django-crispy-forms==1.11.2
+django-filter==2.4.0
+docutils==0.17.1
+filelock==3.7.0
 gunicorn==19.6.0
 heroku==0.1.4
-idna==3.1
+idna==2.10
+imagesize==1.2.0
 Jinja2==2.11.3
+jmespath==1.0.0
 Mako==1.1.4
 Markdown==3.3.4
 MarkupSafe==1.1.1
@@ -22,23 +31,35 @@ multidict==5.1.0
 mysql==0.0.2
 mysql-connector-python==8.0.23
 mysqlclient==2.0.3
+packaging==20.9
+pdoc==7.0.3
 pdoc3==0.9.2
 Pillow==8.2.0
+platformdirs==2.5.2
 protobuf==3.15.8
 psycopg2==2.8.6
 Pygments==2.8.1
 PyMySQL==1.0.2
-PyQt5==5.15.4
-PyQt5-Qt5==5.15.2
-PyQt5-sip==12.8.1
-python-dateutil==1.5
+pyparsing==2.4.7
+python-dateutil==2.8.2
 python-decouple==3.4
 python-dotenv==0.15.0
 pytz==2020.5
 requests==2.25.1
+s3transfer==0.5.2
 six==1.15.0
+snowballstemmer==2.1.0
+Sphinx==4.0.2
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==2.0.0
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.5
 sqlparse==0.4.1
 typing-extensions==3.7.4.3
 urllib3==1.26.5
+validate-email==1.3
+virtualenv==20.14.1
 whitenoise==3.2
 yarl==1.6.3
