--- a/requirements.txt
+++ b/requirements.txt
@@ -32,7 +32,7 @@ MarkupSafe==1.1.1
 multidict==5.1.0
 mysql==0.0.2
 mysql-connector-python==8.0.23
-mysqlclient @ file:///C:/Users/Xavier%20Anaya%20Xaubet/PycharmProjects/projecte_cine/mysqlclient-1.4.6-cp39-cp39-win_amd64.whl
+mysqlclient==2.0.3
 packaging==20.9
 pdoc==7.0.3
 pdoc3==0.9.2
