--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,8 @@ asgiref==3.3.4
 async-timeout==3.0.1
 attrs==20.3.0
 Babel==2.9.1
+boto3==1.23.9
+botocore==1.15.1
 certifi==2020.12.5
 chardet==3.0.4
 colorama==0.4.4
@@ -19,11 +21,11 @@ django-filter==2.4.0
 docutils==0.15
 filelock==3.7.0
 gunicorn==19.6.0
-heroku==0.1.4
+heroku3==5.1.4
 idna==2.10
 imagesize==1.2.0
 Jinja2==2.11.3
-jmespath==0.9
+jmespath==0.9.0
 Mako==1.1.4
 Markdown==3.3.4
 MarkupSafe==1.1.1
@@ -44,7 +46,7 @@ pyparsing==2.4.7
 PyQt5==5.15.4
 PyQt5-Qt5==5.15.2
 PyQt5-sip==12.8.1
-
+python-dateutil==2.8.2
 python-decouple==3.4
 python-dotenv==0.15.0
 pytz==2020.5
@@ -61,7 +63,7 @@ sphinxcontrib-qthelp==1.0.3
 sphinxcontrib-serializinghtml==1.1.5
 sqlparse==0.4.1
 typing-extensions==3.7.4.3
-urllib3==1.24
+urllib3==1.26.0
 validate-email==1.3
 virtualenv==20.14.1
 whitenoise==3.2
