--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ Django==3.2.2
 django-bootstrap3==7.0.1
 django-crispy-forms==1.11.2
 django-filter==2.4.0
+django-heroku==0.3.1
 docutils==0.15
 filelock==3.7.0
 gunicorn==19.6.0
