--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ dj-database-url==0.5.0
 Django==3.2.2
 django-bootstrap3==7.0.1
 django-crispy-forms==1.11.2
+django-cors-headers==3.12.0
 django-filter==2.4.0
 django-heroku==0.3.1
 docutils==0.15
