--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ attrs==20.3.0
 Babel==2.9.1
 certifi==2020.12.5
 chardet==3.0.4
+cloudinary==1.29.0
 colorama==0.4.4
 discord==1.0.1
 discord.py==1.6.0
@@ -14,6 +15,7 @@ distlib==0.3.4
 dj-database-url==0.5.0
 Django==3.2.2
 django-bootstrap3==7.0.1
+django-cloudinary-storage==0.3.0
 django-crispy-forms==1.11.2
 django-cors-headers==3.12.0
 django-filter==2.4.0
